feat: page debit cards, highlight current route in menu

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,3 +5,16 @@ div#__next,
 div#__next > div {
     height: 100%;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
+}
+
+footer {
+    flex-shrink: 0;
+}
